@@ -45,9 +45,15 @@ Changelog for 1.3.12
 * Corrected permissions on fixed asset depreciation workflow/menu (Chris T)
 * Corrected Perl issues on _db_init when custom fields defined, 5.12 (Chris T)
 * Adding missing permissions for editing parts (Chris T)
+* Clarified string for vendor's part number in parts screen (Frans S)
+* Recon checkbox now is set properly (Chris T)
+* Corrected missing "search assets" menu item (Chris T)
+* Net Book Value report now shows undepreciated assets (Chris T)
+* Permissions fixes to fixed asset module (Chris T)
 
 Hilton D is Hilton Day
-
+Frans S is Frans van der Star
+Chris T is Chris Travers
 Changelog for 1.3.11
 * Fixed outstanding report for payment reversal and partial payments (Chris T)
 * Fixed handling of non-existing roles in menu grants (Chris T)
